Updated tidb experiment

--- a/experiments/tidb.ipynb
+++ b/experiments/tidb.ipynb
@@ -6,14 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import argparse\n",
-    "import os\n",
-    "import shutil\n",
-    "from langchain.document_loaders.pdf import PyPDFDirectoryLoader\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain.schema.document import Document\n",
-    "from get_embedding_function import get_embedding_function\n",
-    "from langchain.vectorstores.chroma import Chroma"
+    "from utils import load_documents,split_documents,calculate_chunk_ids"
    ]
   },
   {
@@ -22,11 +16,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CHUNK_SIZE=800\n",
-    "CHUNK_OVERLAP=80\n",
-    "\n",
-    "DATA_PATH = \"data/Galapagos/pdfs\"\n",
-    "\n",
     "SIMILARITY_METRIC = \"cosine\" # l1/l2/cosine and negative inner product"
    ]
   },
@@ -43,61 +32,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_documents():\n",
-    "    document_loader = PyPDFDirectoryLoader(DATA_PATH)\n",
-    "    return document_loader.load()\n",
-    "\n",
-    "def split_documents(documents: list[Document]):\n",
-    "    text_splitter = RecursiveCharacterTextSplitter(\n",
-    "        chunk_size=CHUNK_SIZE,\n",
-    "        chunk_overlap=CHUNK_OVERLAP,\n",
-    "        length_function=len,\n",
-    "        is_separator_regex=False,\n",
-    "    )\n",
-    "    return text_splitter.split_documents(documents)\n",
-    "\n",
-    "\n",
-    "def calculate_chunk_ids(chunks):\n",
-    "\n",
-    "    # This will create IDs like \"data/monopoly.pdf:6:2\"\n",
-    "    # Page Source : Page Number : Chunk Index\n",
-    "\n",
-    "    last_page_id = None\n",
-    "    current_chunk_index = 0\n",
-    "\n",
-    "    for chunk in chunks:\n",
-    "        source = chunk.metadata.get(\"source\")\n",
-    "        page = chunk.metadata.get(\"page\")\n",
-    "        current_page_id = f\"{source}:{page}\"\n",
-    "\n",
-    "        # If the page ID is the same as the last one, increment the index.\n",
-    "        if current_page_id == last_page_id:\n",
-    "            current_chunk_index += 1\n",
-    "        else:\n",
-    "            current_chunk_index = 0\n",
-    "\n",
-    "        # Calculate the chunk ID.\n",
-    "        chunk_id = f\"{current_page_id}:{current_chunk_index}\"\n",
-    "        last_page_id = current_page_id\n",
-    "\n",
-    "        # Add it to the page meta-data.\n",
-    "        chunk.metadata[\"id\"] = chunk_id\n",
-    "\n",
-    "    return chunks\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "documents = load_documents()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +46,7 @@
        "164"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +75,7 @@
        "494"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,17 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'source': 'data/Galapagos/pdfs/CnE_GUI-CE-027 Guidance on Declaration of Interest (1).pdf',\n",
+       "{'source': '../data/Galapagos/pdfs/CnE_GUI-CE-027 Guidance on Declaration of Interest (1).pdf',\n",
        " 'page': 0}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +116,7 @@
        "'Do you need to\\n(Also known as a Conflict of Interest)DECLARE AN INTEREST?\\nYou may need to declare an interest where a potential conflict arises…\\nA potential conflict of interest just means that your personal interests could conflict with your role and decisions at \\nGalapagos. \\nIt doesn’t mean that there is an actual conflict or that you’ve done anything wrong. In fact, conflicts are usually a \\nresult of good things — like having good relationships through friendships or investments. \\nBut they could also be perceived by someone else as impacting your judgment, or could harm the trust between \\ncolleagues, and that’s why we need to be aware of them so we can take any steps we need to manage them. \\nHere are some examples…\\nWhat should I do if I think I might need to declare an interest?'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,6 +471,26 @@
     "results2_content = \"\"\n",
     "for chunk,distance in results2:\n",
     "    results2_content += chunk.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'|   1ATTENDEES - Best meeting practices\\n•Decide if you are joining the meeting\\n\\uf0fcRSVP (respond) to the meeting organizer as soon as possible\\n•Prepare: read the agenda and the pre- work\\n\\uf0fccheck tasks from last meeting, prepare insights and /or questions\\n•Be on time\\n•Be present, participate and avoid distractions\\n\\uf0fcturn off notifications, put away your phone\\n•Make sure you are heard, even if your opinion is less popular \\n•Reflect: did I participate, and did I share my opinion?\\n•Provide feedback to the meeting organizer for potential improvement\\n•Read and review the minutes \\n•Check the follow -up tasks and act on yours\\nBefore\\nDuring\\nAfter|   1ORGANIZERS - Best meeting practices\\n•Decide if you really need the meeting and select correct meeting type\\n•Define a clear and timed agenda, including the meeting objective\\n•Use the Outlook Scheduling Assistant to plan at an appropriate time\\n•Carefully choose the attendees, share the agenda and materials in advance\\n•Start by introducing people, stating the objective, and showing the agenda\\n•Assign note -taker and timekeeper, but record tasks yourself\\n•Moderate and ensure a safe space for everyone to get the word\\n•End meeting by summarizing the follow -up tasks for all attendees\\n•Share with all attendees the follow -up tasks and the meeting minutes\\n•Reflect: was the meeting goal achieved, and was everyone heard?\\n•Ensure follow -up and plan next meeting if necessary\\nBefore\\nDuring\\nAfterTips for engaging and inclusive meetings\\n☑Build trust and encourage participation\\n|   1•assign minutes -taker and time -keeper roles\\n•send the agenda (and pre -work) to the attendees in advance\\n•keep it focused and engaging\\n\\uf0d8be well -prepared to retain attendees’ attention \\n\\uf0d8keep the meeting as short as possible\\n\\uf0d8use polls, ratings, and whiteboards\\n\\uf0d8establish ground rules at the start of the meeting\\n•has everyone’s point of view been heard?\\n\\uf0d8ask questions to prompt discussion and listen activelyTime Management tips for Effective Meetings\\n☑Respect other people’s time\\n|   1•respond to meeting invites as soon as you receive them\\n•reschedule timely to resolve meeting conflicts\\n•don’t be afraid to politely decline a meeting\\n(are you needed there? ask for an agenda, align expectations)\\n☑Save yourself some time\\n•share your calendar titles with your functional and TA teams\\n•book well in advance long, recurring, and team meetings\\n•respect time -zones and working hours, yours included!Calendar Man agement tips for Effective Meetings\\n|   1☑Organ ize your calendar\\n•state your working hours (e.g. 09:00-1 7:00)\\n•change default meeting duration to 25’ instead of 30’\\n•book lunch and travel time as OOO\\n•book focus time as ‘tentative’ to avoid blocking your entire agenda\\n☑Organi ze y our calenda r for OOO days\\n•add public holidays for all major GLPG sites (single action)\\n•enter your vacation on Outlook well in advance\\n•reschedule (or decline) meetings happening during your absence'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results1_content"
    ]
   },
   {
@@ -550,26 +510,6 @@
     }
    ],
    "source": [
-    "results1_content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'|   1ATTENDEES - Best meeting practices\\n•Decide if you are joining the meeting\\n\\uf0fcRSVP (respond) to the meeting organizer as soon as possible\\n•Prepare: read the agenda and the pre- work\\n\\uf0fccheck tasks from last meeting, prepare insights and /or questions\\n•Be on time\\n•Be present, participate and avoid distractions\\n\\uf0fcturn off notifications, put away your phone\\n•Make sure you are heard, even if your opinion is less popular \\n•Reflect: did I participate, and did I share my opinion?\\n•Provide feedback to the meeting organizer for potential improvement\\n•Read and review the minutes \\n•Check the follow -up tasks and act on yours\\nBefore\\nDuring\\nAfter|   1ORGANIZERS - Best meeting practices\\n•Decide if you really need the meeting and select correct meeting type\\n•Define a clear and timed agenda, including the meeting objective\\n•Use the Outlook Scheduling Assistant to plan at an appropriate time\\n•Carefully choose the attendees, share the agenda and materials in advance\\n•Start by introducing people, stating the objective, and showing the agenda\\n•Assign note -taker and timekeeper, but record tasks yourself\\n•Moderate and ensure a safe space for everyone to get the word\\n•End meeting by summarizing the follow -up tasks for all attendees\\n•Share with all attendees the follow -up tasks and the meeting minutes\\n•Reflect: was the meeting goal achieved, and was everyone heard?\\n•Ensure follow -up and plan next meeting if necessary\\nBefore\\nDuring\\nAfterTips for engaging and inclusive meetings\\n☑Build trust and encourage participation\\n|   1•assign minutes -taker and time -keeper roles\\n•send the agenda (and pre -work) to the attendees in advance\\n•keep it focused and engaging\\n\\uf0d8be well -prepared to retain attendees’ attention \\n\\uf0d8keep the meeting as short as possible\\n\\uf0d8use polls, ratings, and whiteboards\\n\\uf0d8establish ground rules at the start of the meeting\\n•has everyone’s point of view been heard?\\n\\uf0d8ask questions to prompt discussion and listen activelyTime Management tips for Effective Meetings\\n☑Respect other people’s time\\n|   1•respond to meeting invites as soon as you receive them\\n•reschedule timely to resolve meeting conflicts\\n•don’t be afraid to politely decline a meeting\\n(are you needed there? ask for an agenda, align expectations)\\n☑Save yourself some time\\n•share your calendar titles with your functional and TA teams\\n•book well in advance long, recurring, and team meetings\\n•respect time -zones and working hours, yours included!Calendar Man agement tips for Effective Meetings\\n|   1☑Organ ize your calendar\\n•state your working hours (e.g. 09:00-1 7:00)\\n•change default meeting duration to 25’ instead of 30’\\n•book lunch and travel time as OOO\\n•book focus time as ‘tentative’ to avoid blocking your entire agenda\\n☑Organi ze y our calenda r for OOO days\\n•add public holidays for all major GLPG sites (single action)\\n•enter your vacation on Outlook well in advance\\n•reschedule (or decline) meetings happening during your absence'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "results2_content"
    ]
   },
@@ -582,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,16 +553,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'During a meeting, you should:\\n\\n- Be on time.\\n- Be present and participate actively.\\n- Avoid distractions by turning off notifications and putting away your phone.\\n- Ensure your opinions are heard, even if they are less popular.\\n- Reflect on your participation and whether you shared your opinion.\\n- Provide feedback to the meeting organizer for potential improvement.'"
+       "'During a meeting, you should:\\n\\n1. Be on time.\\n2. Be present, participate, and avoid distractions (turn off notifications, put away your phone).\\n3. Make sure you are heard, even if your opinion is less popular.\\n4. Reflect on your participation and whether you shared your opinion.\\n5. Provide feedback to the meeting organizer for potential improvement.'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,16 +584,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"During a meeting, your behavior should align with the following practices:\\n\\n- Be on time.\\n- Be present and participate actively while avoiding distractions (e.g., turn off notifications and put away your phone).\\n- Ensure your opinions are heard, even if they are less popular.\\n- Reflect on your participation and whether you've shared your opinion effectively.\\n- Provide feedback to the meeting organizer for potential improvement.\""
+       "'During a meeting, you should:\\n\\n1. Be on time.\\n2. Be present and participate actively while avoiding distractions (e.g., turning off notifications and putting away your phone).\\n3. Ensure your voice is heard, even if your opinion is less popular.\\n4. Reflect on your participation and whether you shared your opinion.'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
