update : used cloud for weaviate v4

--- a/experiments/weaviate/weaviate_v4.ipynb
+++ b/experiments/weaviate/weaviate_v4.ipynb
@@ -60,7 +60,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1721828889.518331   10688 config.cc:230] gRPC experiments enabled: call_status_override_on_cancellation, event_engine_dns, event_engine_listener, http2_stats_fix, monitoring_experiment, pick_first_new, trace_record_callops, work_serializer_clears_time_cache\n"
+      "I0000 00:00:1721829799.438670   12504 config.cc:230] gRPC experiments enabled: call_status_override_on_cancellation, event_engine_dns, event_engine_listener, http2_stats_fix, monitoring_experiment, pick_first_new, trace_record_callops, work_serializer_clears_time_cache\n"
      ]
     }
    ],
@@ -69,21 +69,25 @@
     "import weaviate, os\n",
     "\n",
     "# Connect to your local Weaviate instance deployed with Docker\n",
-    "client = weaviate.connect_to_local(\n",
-    "    headers={\n",
-    "        \"X-OpenAI-Api-Key\": os.environ[\"OPENAI_APIKEY\"] # Replace with your Cohere key - recommended: use env var\n",
-    "    }\n",
-    ")\n",
+    "# client = weaviate.connect_to_local(\n",
+    "#     headers={\n",
+    "#         \"X-OpenAI-Api-Key\": os.environ[\"OPENAI_APIKEY\"] # Replace with your Cohere key - recommended: use env var\n",
+    "#     }\n",
+    "# )\n",
     "\n",
     "# Option 2\n",
     "# Connect to your Weaviate Client Service cluster\n",
-    "# client = weaviate.connect_to_wcs(\n",
-    "#     cluster_url=\"WCS-CLUSTER-ID\",                             # Replace with your WCS cluster ID\n",
-    "#     auth_credentials=weaviate.auth.AuthApiKey(\"WCS-API-KEY\"), # Replace with your WCS API KEY - recommended: use env var\n",
-    "#     headers={\n",
-    "#         \"X-OpenAI-Api-Key\": os.getenv(\"OPENAI-API-KEY\"),      # Replace with your inference API key - recommended: use env var\n",
-    "#     }\n",
-    "# )\n"
+    "\n",
+    "WEAVIATE_ADMIN_BEARER_TOKEN = os.getenv(\"WEAVIATE_ADMIN\")\n",
+    "WEAVIATE_URL = os.getenv(\"WEAVIATE_URL\")\n",
+    "client = weaviate.connect_to_weaviate_cloud(\n",
+    "    cluster_url=WEAVIATE_URL,                             # Replace with your WCS cluster ID\n",
+    "    auth_credentials=weaviate.auth.AuthApiKey(api_key=WEAVIATE_ADMIN_BEARER_TOKEN), # Replace with your WCS API KEY - recommended: use env var\n",
+    "    skip_init_checks=True,\n",
+    "    headers={\n",
+    "        \"X-OpenAI-Api-Key\": os.getenv(\"OPENAI_APIKEY\"),      # Replace with your inference API key - recommended: use env var\n",
+    "    }\n",
+    ")\n"
    ]
   },
   {
@@ -531,7 +535,7 @@
     {
      "data": {
       "text/plain": [
-       "\"To behave effectively in a meeting:\\n\\n- **RSVP promptly** to the meeting organizer.\\n- **Prepare by reading** the agenda and completing any pre-work, ensuring you check tasks from the last meeting and prepare insights or questions.\\n- **Be punctual.**\\n- **Be present and participate actively**, avoiding distractions by turning off notifications and putting away your phone.\\n- **Ensure your voice is heard**, even if your opinion is less popular.\\n- **Reflect on your participation** and whether you shared your opinion.\\n- **Provide feedback** to the meeting organizer for improvement.\\n- **Review the minutes** and follow up on assigned tasks.\\n\\nAdditionally, respect other people’s time by responding to invites promptly, and don't hesitate to reschedule or decline if necessary.\""
+       "'To behave effectively in a meeting:\\n\\n1. Before the Meeting:\\n   - RSVP to the meeting organizer as soon as possible.\\n   - Prepare by reading the agenda and completing any pre-work.\\n   - Check tasks from the last meeting, and prepare insights or questions.\\n\\n2. During the Meeting:\\n   - Be on time.\\n   - Be present and participate actively while avoiding distractions (turn off notifications and put away your phone).\\n   - Ensure your voice is heard, even if your opinion is less popular.\\n   - Engage respectfully and listen to others.\\n\\n3. After the Meeting:\\n   - Reflect on your participation and whether you shared your opinion.\\n   - Provide feedback to the meeting organizer for potential improvements.\\n   - Read and review the meeting minutes.\\n   - Check and act on your follow-up tasks.'"
       ]
      },
      "execution_count": 26,
@@ -561,7 +565,7 @@
     {
      "data": {
       "text/plain": [
-       "' \\nTo behave effectively in a meeting:\\n- RSVP to the meeting organizer promptly to confirm your attendance.\\n- Prepare by reading the agenda, completing any pre-work, and reviewing tasks from the last meeting.\\n- Arrive on time.\\n- Be fully present and participate actively; turn off notifications and put away your phone to avoid distractions.\\n- Ensure your voice is heard, even if your opinion is less popular.\\n- Reflect on your participation and whether you shared your opinion.\\n- Provide feedback to the meeting organizer for improvements.\\n- Review the meeting minutes afterward.\\n- Check and act on any follow-up tasks assigned to you.\\n'"
+       "' \\n\"To behave effectively in a meeting:\\n\\n- **RSVP promptly** to the meeting organizer.\\n- **Prepare by reading** the agenda and completing any pre-work, ensuring you check tasks from the last meeting and prepare insights or questions.\\n- **Be punctual.**\\n- **Be present and participate actively**, avoiding distractions by turning off notifications and putting away your phone.\\n- **Ensure your voice is heard**, even if your opinion is less popular.\\n- **Reflect on your participation** and whether you shared your opinion.\\n- **Provide feedback** to the meeting organizer for improvement.\\n- **Review the minutes** and follow up on assigned tasks.\\nAdditionally, respect other people’s time by responding to invites promptly, and don\\'t hesitate to reschedule or decline if necessary.\"\\n'"
       ]
      },
      "execution_count": 27,
