--- a/experiments/weaviate/weaviate_v4.ipynb
+++ b/experiments/weaviate/weaviate_v4.ipynb
@@ -43,11 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EMBEDDING_MODEL = \"text-embedding-ada-002\""
+    "EMBEDDING_MODEL_CONFIG= {\n",
+    "    \"model\": \"ada\", \n",
+    "    \"version\": \"002\",\n",
+    "    \"type\": \"text\"\n",
+    "}\n",
+    "EMBEDDING_MODEL = EMBEDDING_MODEL_CONFIG['type']+\"-embedding-\"+EMBEDDING_MODEL_CONFIG['model']+\"-\"+EMBEDDING_MODEL_CONFIG['version']"
    ]
   },
   {
@@ -60,7 +65,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1721829799.438670   12504 config.cc:230] gRPC experiments enabled: call_status_override_on_cancellation, event_engine_dns, event_engine_listener, http2_stats_fix, monitoring_experiment, pick_first_new, trace_record_callops, work_serializer_clears_time_cache\n"
+      "I0000 00:00:1721885815.223347    6134 config.cc:230] gRPC experiments enabled: call_status_override_on_cancellation, event_engine_dns, event_engine_listener, http2_stats_fix, monitoring_experiment, pick_first_new, trace_record_callops, work_serializer_clears_time_cache\n"
      ]
     }
    ],
@@ -112,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +133,10 @@
     "# in \"JeopardyQuestion\", and then you need to re-import it again.\n",
     "import weaviate.classes.config as wc\n",
     "\n",
+    "DISTANCE_METRIC = wc.VectorDistances.COSINE\n",
+    "\n",
+    "\n",
+    "\n",
     "# Delete the collection if it already exists\n",
     "if (client.collections.exists(\"Chunk\")):\n",
     "    client.collections.delete(\"Chunk\")\n",
@@ -136,10 +145,11 @@
     "    name=\"Chunk\",\n",
     "\n",
     "    vectorizer_config=wc.Configure.Vectorizer.text2vec_openai( # specify the vectorizer and model type you're using\n",
-    "        model=\"ada\",\n",
-    "        model_version=\"002\",\n",
-    "        type_=\"text\"\n",
+    "        model=EMBEDDING_MODEL_CONFIG['model'],\n",
+    "        model_version=EMBEDDING_MODEL_CONFIG['version'],\n",
+    "        type_=EMBEDDING_MODEL_CONFIG['type']\n",
     "    ),\n",
+    "    vector_index_config=wc.Configure.VectorIndex.hnsw(distance_metric=DISTANCE_METRIC),\n",
     "\n",
     "    # Enable generative model from Cohere\n",
     "    generative_config=wc.Configure.Generative.openai(\n",
@@ -164,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +192,7 @@
        "172"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +223,7 @@
        " 'Do you need to\\n(Also known as a Conflict of Interest)DECLARE AN INTEREST?\\nYou may need to declare an interest where a potential conflict arises…\\nA potential conflict of interest just means that your personal interests could conflict with your role and decisions at \\nGalapagos. \\nIt doesn’t mean that there is an actual conflict or that you’ve done anything wrong. In fact, conflicts are usually a \\nresult of good things — like having good relationships through friendships or investments. \\nBut they could also be perceived by someone else as impacting your judgment, or could harm the trust between \\ncolleagues, and that’s why we need to be aware of them so we can take any steps we need to manage them. \\nHere are some examples…\\nWhat should I do if I think I might need to declare an interest?')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +252,7 @@
        "'../../data/Galapagos/pdfs/CnE_GUI-CE-027 Guidance on Declaration of Interest (1).pdf:0:0'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +399,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../../data/Galapagos/pdfs/LnD_JobAid_Best-Practises-Attendees_Effective-Meetings.pdf:0:0\n",
+      "../../data/Galapagos/pdfs/LnD_JobAid_Time-Management-Tips_Effective-Meetings-1pager.pdf:0:0\n",
+      "../../data/Galapagos/pdfs/LnD_JobAid_Best-Practices-Organizer_Effective-Meetings-1pager.pdf:0:0\n",
+      "../../data/Galapagos/pdfs/LnD_JobAid_Engaging-Meetings-Tips_Effective-Meetings-1pager.pdf:0:0\n",
+      "../../data/Galapagos/pdfs/LnD_JobAid_Calendar-Management-Tips_Effective-Meetings-1pager.pdf:0:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for chunk in response.objects:\n",
+    "    print(chunk.properties['chunk_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +452,7 @@
        "'|   1ATTENDEES - Best meeting practices\\n•Decide if you are joining the meeting\\n\\uf0fcRSVP (respond) to the meeting organizer as soon as possible\\n•Prepare: read the agenda and the pre- work\\n\\uf0fccheck tasks from last meeting, prepare insights and /or questions\\n•Be on time\\n•Be present, participate and avoid distractions\\n\\uf0fcturn off notifications, put away your phone\\n•Make sure you are heard, even if your opinion is less popular \\n•Reflect: did I participate, and did I share my opinion?\\n•Provide feedback to the meeting organizer for potential improvement\\n•Read and review the minutes \\n•Check the follow -up tasks and act on yours\\nBefore\\nDuring\\nAfter\\n\\nTime Management tips for Effective Meetings\\n☑Respect other people’s time\\n|   1•respond to meeting invites as soon as you receive them\\n•reschedule timely to resolve meeting conflicts\\n•don’t be afraid to politely decline a meeting\\n(are you needed there? ask for an agenda, align expectations)\\n☑Save yourself some time\\n•share your calendar titles with your functional and TA teams\\n•book well in advance long, recurring, and team meetings\\n•respect time -zones and working hours, yours included!\\n\\n|   1ORGANIZERS - Best meeting practices\\n•Decide if you really need the meeting and select correct meeting type\\n•Define a clear and timed agenda, including the meeting objective\\n•Use the Outlook Scheduling Assistant to plan at an appropriate time\\n•Carefully choose the attendees, share the agenda and materials in advance\\n•Start by introducing people, stating the objective, and showing the agenda\\n•Assign note -taker and timekeeper, but record tasks yourself\\n•Moderate and ensure a safe space for everyone to get the word\\n•End meeting by summarizing the follow -up tasks for all attendees\\n•Share with all attendees the follow -up tasks and the meeting minutes\\n•Reflect: was the meeting goal achieved, and was everyone heard?\\n•Ensure follow -up and plan next meeting if necessary\\nBefore\\nDuring\\nAfter\\n\\nTips for engaging and inclusive meetings\\n☑Build trust and encourage participation\\n|   1•assign minutes -taker and time -keeper roles\\n•send the agenda (and pre -work) to the attendees in advance\\n•keep it focused and engaging\\n\\uf0d8be well -prepared to retain attendees’ attention \\n\\uf0d8keep the meeting as short as possible\\n\\uf0d8use polls, ratings, and whiteboards\\n\\uf0d8establish ground rules at the start of the meeting\\n•has everyone’s point of view been heard?\\n\\uf0d8ask questions to prompt discussion and listen actively\\n\\nCalendar Man agement tips for Effective Meetings\\n|   1☑Organ ize your calendar\\n•state your working hours (e.g. 09:00-1 7:00)\\n•change default meeting duration to 25’ instead of 30’\\n•book lunch and travel time as OOO\\n•book focus time as ‘tentative’ to avoid blocking your entire agenda\\n☑Organi ze y our calenda r for OOO days\\n•add public holidays for all major GLPG sites (single action)\\n•enter your vacation on Outlook well in advance\\n•reschedule (or decline) meetings happening during your absence\\n\\n'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +472,7 @@
        "\" \\n'|   1ATTENDEES - Best meeting practices\\n•Decide if you are joining the meeting\\n\\uf0fcRSVP (respond) to the meeting organizer as soon as possible\\n•Prepare: read the agenda and the pre- work\\n\\uf0fccheck tasks from last meeting, prepare insights and /or questions\\n•Be on time\\n•Be present, participate and avoid distractions\\n\\uf0fcturn off notifications, put away your phone\\n•Make sure you are heard, even if your opinion is less popular \\n•Reflect: did I participate, and did I share my opinion?\\n•Provide feedback to the meeting organizer for potential improvement\\n•Read and review the minutes \\n•Check the follow -up tasks and act on yours\\nBefore\\nDuring\\nAfter\\n\\nTime Management tips for Effective Meetings\\n☑Respect other people’s time\\n|   1•respond to meeting invites as soon as you receive them\\n•reschedule timely to resolve meeting conflicts\\n•don’t be afraid to politely decline a meeting\\n(are you needed there? ask for an agenda, align expectations)\\n☑Save yourself some time\\n•share your calendar titles with your functional and TA teams\\n•book well in advance long, recurring, and team meetings\\n•respect time -zones and working hours, yours included!\\n\\n|   1ORGANIZERS - Best meeting practices\\n•Decide if you really need the meeting and select correct meeting type\\n•Define a clear and timed agenda, including the meeting objective\\n•Use the Outlook Scheduling Assistant to plan at an appropriate time\\n•Carefully choose the attendees, share the agenda and materials in advance\\n•Start by introducing people, stating the objective, and showing the agenda\\n•Assign note -taker and timekeeper, but record tasks yourself\\n•Moderate and ensure a safe space for everyone to get the word\\n•End meeting by summarizing the follow -up tasks for all attendees\\n•Share with all attendees the follow -up tasks and the meeting minutes\\n•Reflect: was the meeting goal achieved, and was everyone heard?\\n•Ensure follow -up and plan next meeting if necessary\\nBefore\\nDuring\\nAfter\\n\\nTips for engaging and inclusive meetings\\n☑Build trust and encourage participation\\n|   1•assign minutes -taker and time -keeper roles\\n•send the agenda (and pre -work) to the attendees in advance\\n•keep it focused and engaging\\n\\uf0d8be well -prepared to retain attendees’ attention \\n\\uf0d8keep the meeting as short as possible\\n\\uf0d8use polls, ratings, and whiteboards\\n\\uf0d8establish ground rules at the start of the meeting\\n•has everyone’s point of view been heard?\\n\\uf0d8ask questions to prompt discussion and listen actively\\n\\nCalendar Man agement tips for Effective Meetings\\n|   1☑Organ ize your calendar\\n•state your working hours (e.g. 09:00-1 7:00)\\n•change default meeting duration to 25’ instead of 30’\\n•book lunch and travel time as OOO\\n•book focus time as ‘tentative’ to avoid blocking your entire agenda\\n☑Organi ze y our calenda r for OOO days\\n•add public holidays for all major GLPG sites (single action)\\n•enter your vacation on Outlook well in advance\\n•reschedule (or decline) meetings happening during your absence\\n\\n'\\n\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,16 +561,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'To behave effectively in a meeting:\\n\\n1. Before the Meeting:\\n   - RSVP to the meeting organizer as soon as possible.\\n   - Prepare by reading the agenda and completing any pre-work.\\n   - Check tasks from the last meeting, and prepare insights or questions.\\n\\n2. During the Meeting:\\n   - Be on time.\\n   - Be present and participate actively while avoiding distractions (turn off notifications and put away your phone).\\n   - Ensure your voice is heard, even if your opinion is less popular.\\n   - Engage respectfully and listen to others.\\n\\n3. After the Meeting:\\n   - Reflect on your participation and whether you shared your opinion.\\n   - Provide feedback to the meeting organizer for potential improvements.\\n   - Read and review the meeting minutes.\\n   - Check and act on your follow-up tasks.'"
+       "\"In a meeting, you should:\\n\\n- RSVP to the meeting organizer as soon as possible.\\n- Prepare by reading the agenda and any provided materials, and check tasks from the last meeting.\\n- Be on time.\\n- Be present, participate actively, and avoid distractions by turning off notifications and putting away your phone.\\n- Ensure your opinions are heard, even if they are less popular.\\n- Reflect on your participation and opinion-sharing after the meeting.\\n- Provide feedback to the meeting organizer for improvement.\\n- Read and review the meeting minutes.\\n- Check and act on your follow-up tasks.\\n\\nAdditionally, respect other people's time, and ensure you manage your calendar effectively by responding to invites, scheduling timely, and using appropriate time management strategies.\""
       ]
      },
-     "execution_count": 26,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,33 +591,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' \\n\"To behave effectively in a meeting:\\n\\n- **RSVP promptly** to the meeting organizer.\\n- **Prepare by reading** the agenda and completing any pre-work, ensuring you check tasks from the last meeting and prepare insights or questions.\\n- **Be punctual.**\\n- **Be present and participate actively**, avoiding distractions by turning off notifications and putting away your phone.\\n- **Ensure your voice is heard**, even if your opinion is less popular.\\n- **Reflect on your participation** and whether you shared your opinion.\\n- **Provide feedback** to the meeting organizer for improvement.\\n- **Review the minutes** and follow up on assigned tasks.\\nAdditionally, respect other people’s time by responding to invites promptly, and don\\'t hesitate to reschedule or decline if necessary.\"\\n'"
+       "\" \\n'In a meeting, follow these best practices: \\n\\n1. **Before the Meeting:**\\n   - RSVP to the meeting organizer as soon as possible.\\n   - Prepare by reading the agenda and any pre-work.\\n   - Check tasks from the last meeting and prepare insights/questions.\\n\\n2. **During the Meeting:**\\n   - Be on time and stay present by participating and avoiding distractions (turn off notifications and put away your phone).\\n   - Ensure you are heard, even if your opinion is less popular.\\n   - Reflect on your participation and share your opinion.\\n\\n3. **After the Meeting:**\\n   - Provide feedback to the meeting organizer for improvement.\\n   - Read and review the minutes.\\n   - Check the follow-up tasks and act on yours.'\\n\""
       ]
      },
-     "execution_count": 27,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "''' \n",
-    "\"To behave effectively in a meeting:\n",
+    "'In a meeting, follow these best practices: \n",
     "\n",
-    "- **RSVP promptly** to the meeting organizer.\n",
-    "- **Prepare by reading** the agenda and completing any pre-work, ensuring you check tasks from the last meeting and prepare insights or questions.\n",
-    "- **Be punctual.**\n",
-    "- **Be present and participate actively**, avoiding distractions by turning off notifications and putting away your phone.\n",
-    "- **Ensure your voice is heard**, even if your opinion is less popular.\n",
-    "- **Reflect on your participation** and whether you shared your opinion.\n",
-    "- **Provide feedback** to the meeting organizer for improvement.\n",
-    "- **Review the minutes** and follow up on assigned tasks.\n",
-    "Additionally, respect other people’s time by responding to invites promptly, and don't hesitate to reschedule or decline if necessary.\"\n",
+    "1. **Before the Meeting:**\n",
+    "   - RSVP to the meeting organizer as soon as possible.\n",
+    "   - Prepare by reading the agenda and any pre-work.\n",
+    "   - Check tasks from the last meeting and prepare insights/questions.\n",
+    "\n",
+    "2. **During the Meeting:**\n",
+    "   - Be on time and stay present by participating and avoiding distractions (turn off notifications and put away your phone).\n",
+    "   - Ensure you are heard, even if your opinion is less popular.\n",
+    "   - Reflect on your participation and share your opinion.\n",
+    "\n",
+    "3. **After the Meeting:**\n",
+    "   - Provide feedback to the meeting organizer for improvement.\n",
+    "   - Read and review the minutes.\n",
+    "   - Check the follow-up tasks and act on yours.'\n",
     "'''"
    ]
   }
